[project]
name = "rebalancer"
version = "0.1.0"
description = "Automated portfolio rebalancer with backtesting and reporting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "plotly>=5.0",
    "click>=8.1",
]

[project.scripts]
rebalancer = "rebalancer.cli:main"
rebalancer-simulate = "rebalancer.cli_simulator:simulate"
rebalancer-daily = "rebalancer.cli_rebalance:daily_check"
rebalancer-sync-positions = "rebalancer.cli_rebalance:sync_positions"
rebalancer-compare = "rebalancer.cli_simulator:compare_tickers"
rebalancer-ramp-plan = "rebalancer.cli_ramp:ramp_plan"
rebalancer-ramp-backtest = "rebalancer.cli_ramp:ramp_backtest"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rebalancer"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
